2009-06-03	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libcsupport/include/rtems/assoc.h,
	libcsupport/include/rtems/malloc.h: Add extern "C" {} guards.
	* libcsupport/include/rtems/libio_.h: Move extern "C" {} guards.

2009-06-01	Joel Sherrill <joel.sherrill@OARcorp.com>

	* score/include/rtems/score/thread.h, score/src/threadinitialize.c,
	score/src/threadreset.c, score/src/threadresume.c,
	score/src/threadsuspend.c: Nesting count on thread suspension is only
	supported from ITRON API so disable if ITRON is disabled.

2009-06-01	Joel Sherrill <joel.sherrill@OARcorp.com>

	* score/include/rtems/score/thread.h, score/src/threadhandler.c: Merge
	conditional code from main and init/fini C++ constructors so the body
	of this method reads better. Mark thread prototypes which are not
	currently exercised by any APIs with
	FUNCTIONALITY_NOT_CURRENTLY_USED_BY_ANY_API conditional.

2009-05-28	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1415/cpukit
	* rtems/src/semcreate.c, rtems/src/semtranslatereturncode.c,
	score/include/rtems/score/coremutex.h,
	score/inline/rtems/score/coremutex.inl, score/src/coremutex.c:
	Address two paths where a task with a priority above the ceiling
	could obtain a priority ceiling mutex.

2009-05-27	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libcsupport/include/rtc.h: New RTC driver interface.
	* libmisc/Makefile.am, libmisc/shell/shellconfig.h: Added RTC command.
	* libmisc/shell/main_rtc.c: New file.

2009-05-21	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1413/cpukit
	* rtems/src/timerserver.c: Fix bug where server based timers which
	reinitiated themselves did not get reinserted onto timer chain.

2009-05-20	Joel Sherrill <joel.sherrill@oarcorp.com>

	* librpc/src/xdr/xdr_float.c: Change detection logic for h8300.

2009-05-18	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1412/cpukit
	* score/src/coremutex.c: Add missing braces. Broken with strict mutex
	code added.

2009-05-15	Joel Sherrill <joel.sherrill@OARcorp.com>
